Update CMake code to use more modern practices.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,178 +1,178 @@
-add_sources(GlobalSourceList
-   ABLProfileFunction.C
-   Actuator.C
-   Algorithm.C
-   AlgorithmDriver.C
-   AssembleContinuityElemOpenSolverAlgorithm.C
-   AssembleContinuityElemSolverAlgorithm.C
-   AssembleContinuityInflowSolverAlgorithm.C
-   AssembleContinuityNonConformalSolverAlgorithm.C
-   AssembleCourantReynoldsElemAlgorithm.C
-   AssembleElemSolverAlgorithm.C
-   AssembleElemSolverAlgorithmHO.C
-   AssembleFaceElemSolverAlgorithm.C
-   AssembleEdgeSolverAlgorithm.C
-   AssembleHeatCondIrradWallSolverAlgorithm.C
-   AssembleHeatCondWallSolverAlgorithm.C
-   AssembleMomentumEdgeOpenSolverAlgorithm.C
-   AssembleMomentumEdgeWallFunctionSolverAlgoirthm.C
-   AssembleMomentumElemABLWallFunctionSolverAlgorithm.C
-   AssembleMomentumElemOpenSolverAlgorithm.C
-   AssembleMomentumElemSolverAlgorithm.C
-   AssembleMomentumElemSymmetrySolverAlgorithm.C
-   AssembleMomentumElemWallFunctionSolverAlgoirthm.C
-   AssembleMomentumNonConformalSolverAlgorithm.C
-   AssembleNodalGradAlgorithmDriver.C
-   AssembleNodalGradBoundaryAlgorithm.C
-   AssembleNodalGradPOpenBoundaryAlgorithm.C
-   AssembleNodalGradEdgeAlgorithm.C
-   AssembleNodalGradElemAlgorithm.C
-   AssembleNodalGradNonConformalAlgorithm.C
-   AssembleNodalGradUAlgorithmDriver.C
-   AssembleNodalGradUBoundaryAlgorithm.C
-   AssembleNodalGradUElemAlgorithm.C
-   AssembleNodalGradUNonConformalAlgorithm.C
-   AssembleNodeSolverAlgorithm.C
-   AssembleNGPNodeSolverAlgorithm.C
-   AssemblePNGBoundarySolverAlgorithm.C
-   AssemblePNGElemSolverAlgorithm.C
-   AssemblePNGNonConformalSolverAlgorithm.C
-   AssembleScalarDiffNonConformalSolverAlgorithm.C
-   AssembleScalarEdgeDiffSolverAlgorithm.C
-   AssembleScalarEdgeOpenSolverAlgorithm.C
-   AssembleScalarEigenEdgeSolverAlgorithm.C
-   AssembleScalarElemDiffSolverAlgorithm.C
-   AssembleScalarElemOpenSolverAlgorithm.C
-   AssembleScalarElemSolverAlgorithm.C
-   AssembleScalarFluxBCSolverAlgorithm.C
-   AssembleScalarNonConformalSolverAlgorithm.C
-   AssembleWallHeatTransferAlgorithmDriver.C
-   AuxFunctionAlgorithm.C
-   AveragingInfo.C
-   BoundaryConditions.C
-   ComputeGeometryBoundaryAlgorithm.C
-   ComputeGeometryInteriorAlgorithm.C
-   ComputeHeatTransferEdgeWallAlgorithm.C
-   ComputeHeatTransferElemWallAlgorithm.C
-   ComputeMdotAlgorithmDriver.C
-   ComputeMdotEdgeOpenAlgorithm.C
-   ComputeMdotElemAlgorithm.C
-   ComputeMdotElemOpenAlgorithm.C
-   ComputeMdotElemOpenPenaltyAlgorithm.C
-   ComputeMdotInflowAlgorithm.C
-   ComputeMdotNonConformalAlgorithm.C
-   ComputeSSTMaxLengthScaleElemAlgorithm.C
-   ComputeWallFrictionVelocityAlgorithm.C
-   ConstantAuxFunction.C
-   ContinuityLowSpeedCompressibleNodeSuppAlg.C
-   ContinuityMassElemSuppAlgDep.C
-   CopyFieldAlgorithm.C
-   CoriolisSrc.C
-   DataProbePostProcessing.C
-   DgInfo.C
-   DirichletBC.C
-   EffectiveDiffFluxCoeffAlgorithm.C
-   ElemDataRequests.C
-   ElemDataRequestsGPU.C
-   EnthalpyEquationSystem.C
-   EnthalpyLowSpeedCompressibleNodeSuppAlg.C
-   EnthalpyPmrSrcNodeSuppAlg.C
-   EnthalpyPressureWorkNodeSuppAlg.C
-   EnthalpyViscousWorkNodeSuppAlg.C
-   EquationSystem.C
-   EquationSystems.C
-   ErrorIndicatorAlgorithmDriver.C
-   FieldFunctions.C
-   FixPressureAtNodeAlgorithm.C
-   HeatCondEquationSystem.C
-   HeatCondMassBDF2NodeSuppAlg.C
-   HeatCondMassBackwardEulerNodeSuppAlg.C
-   InitialConditions.C
-   InputOutputRealm.C
-   InterfaceBalancer.C
-   LimiterErrorIndicatorElemAlgorithm.C
-   LinearSolver.C
-   LinearSolverConfig.C
-   LinearSolvers.C
-   LinearSystem.C
-   LowMachEquationSystem.C
-   MassFractionEquationSystem.C
-   MaterialProperty.C
-   MaterialPropertys.C
-   MixtureFractionEquationSystem.C
-   MomentumBoussinesqRASrcNodeSuppAlg.C
-   MomentumBuoyancySrcElemSuppAlgDep.C
-   MomentumBuoyancySrcNodeSuppAlg.C
-   MomentumMassElemSuppAlgDep.C
-   MovingAveragePostProcessor.C
-   NaluEnv.C
-   NaluParsing.C
-   NonConformalInfo.C
-   NonConformalManager.C
-   OutputInfo.C
-   PecletFunction.C
-   PeriodicManager.C
-   PostProcessingInfo.C
-   ProjectedNodalGradientEquationSystem.C
-   PstabErrorIndicatorEdgeAlgorithm.C
-   PstabErrorIndicatorElemAlgorithm.C
-   Realm.C
-   Realms.C
-   ScalarMassElemSuppAlgDep.C
-   ScratchViews.C
-   ShearStressTransportEquationSystem.C
-   SimpleErrorIndicatorElemAlgorithm.C
-   SimpleErrorIndicatorScalarElemAlgorithm.C
-   Simulation.C
-   SolutionNormPostProcessing.C
-   SolutionOptions.C
-   SolverAlgorithm.C
-   SolverAlgorithmDriver.C
-   SpecificDissipationRateEquationSystem.C
-   SupplementalAlgorithm.C
-   SurfaceForceAndMomentAlgorithm.C
-   SurfaceForceAndMomentAlgorithmDriver.C
-   SurfaceForceAndMomentWallFunctionAlgorithm.C
-   TimeIntegrator.C
-   TpetraLinearSystem.C
-   TpetraLinearSystemHelpers.C
-   TpetraSegregatedLinearSystem.C
-   TurbKineticEnergyEquationSystem.C
-   TurbKineticEnergyKsgsBuoyantElemSuppAlg.C
-   TurbViscSmagorinskyAlgorithm.C
-   TurbViscWaleAlgorithm.C
-   TurbulenceAveragingPostProcessing.C
-   AssembleWallDistNonConformalAlgorithm.C
-   WallDistEquationSystem.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/ABLProfileFunction.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Actuator.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityElemOpenSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityInflowSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleCourantReynoldsElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleElemSolverAlgorithmHO.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleFaceElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleEdgeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleHeatCondIrradWallSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleHeatCondWallSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumEdgeOpenSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumEdgeWallFunctionSolverAlgoirthm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumElemABLWallFunctionSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumElemOpenSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumElemSymmetrySolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumElemWallFunctionSolverAlgoirthm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradBoundaryAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradPOpenBoundaryAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradEdgeAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradUAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradUBoundaryAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradUElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodalGradUNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNodeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleNGPNodeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGBoundarySolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePNGNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarDiffNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarEdgeDiffSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarEdgeOpenSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarEigenEdgeSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarElemDiffSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarElemOpenSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarFluxBCSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleScalarNonConformalSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallHeatTransferAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AuxFunctionAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AveragingInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/BoundaryConditions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeGeometryBoundaryAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeGeometryInteriorAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeHeatTransferEdgeWallAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeHeatTransferElemWallAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotEdgeOpenAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotElemOpenAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotElemOpenPenaltyAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotInflowAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeMdotNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeSSTMaxLengthScaleElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ComputeWallFrictionVelocityAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ConstantAuxFunction.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityLowSpeedCompressibleNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityMassElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/CopyFieldAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/CoriolisSrc.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DataProbePostProcessing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DgInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/DirichletBC.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EffectiveDiffFluxCoeffAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ElemDataRequests.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ElemDataRequestsGPU.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyLowSpeedCompressibleNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyPmrSrcNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyPressureWorkNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyViscousWorkNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EquationSystems.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ErrorIndicatorAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FieldFunctions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FixPressureAtNodeAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/HeatCondEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/HeatCondMassBDF2NodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/HeatCondMassBackwardEulerNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/InitialConditions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/InputOutputRealm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/InterfaceBalancer.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LimiterErrorIndicatorElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolverConfig.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSolvers.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LinearSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LowMachEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MassFractionEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MaterialProperty.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MaterialPropertys.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MixtureFractionEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBoussinesqRASrcNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancySrcElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancySrcNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumMassElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MovingAveragePostProcessor.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NaluEnv.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NaluParsing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NonConformalInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NonConformalManager.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/OutputInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PecletFunction.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PeriodicManager.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PostProcessingInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ProjectedNodalGradientEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PstabErrorIndicatorEdgeAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PstabErrorIndicatorElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Realm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Realms.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarMassElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScratchViews.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ShearStressTransportEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SimpleErrorIndicatorElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SimpleErrorIndicatorScalarElemAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Simulation.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolutionNormPostProcessing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolutionOptions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SolverAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SpecificDissipationRateEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SupplementalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentAlgorithmDriver.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceForceAndMomentWallFunctionAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TimeIntegrator.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TpetraLinearSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TpetraLinearSystemHelpers.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TpetraSegregatedLinearSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyKsgsBuoyantElemSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscSmagorinskyAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscWaleAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbulenceAveragingPostProcessing.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallDistNonConformalAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistEquationSystem.C
 )
 
 if(ENABLE_FFTW)
-   add_sources(GlobalSourceList
-      AssembleMomentumEdgeABLTopBC.C
+   target_sources(nalu PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMomentumEdgeABLTopBC.C
    )
 endif()
 
 if(ENABLE_OPENFAST)
-   add_sources(GlobalSourceList
-      ActuatorFAST.C
-      ActuatorLineFAST.C
-      ActuatorDiskFAST.C
+   target_sources(nalu PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorFAST.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorLineFAST.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorDiskFAST.C
    )
 endif()
 
 if(ENABLE_HYPRE)
-   add_sources(GlobalSourceList
-      HypreDirectSolver.C
-      HypreUVWSolver.C
-      HypreLinearSolverConfig.C
-      HypreLinearSystem.C
-      HypreUVWLinearSystem.C
+   target_sources(nalu PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}/HypreDirectSolver.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/HypreUVWSolver.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/HypreLinearSolverConfig.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/HypreLinearSystem.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/HypreUVWLinearSystem.C
    )
 endif()
 
 if(ENABLE_PARAVIEW_CATALYST)
-   add_sources(GlobalSourceList
-      Adapter.C
+   target_sources(nalu PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}/Adapter.C
    )
 endif()
 
