--- a/src/element_promotion/CMakeLists.txt
+++ b/src/element_promotion/CMakeLists.txt
@@ -1,13 +1,13 @@
-add_sources(GlobalSourceList
-   ElementCondenser.C
-   ElementDescription.C
-   HexNElementDescription.C
-   LagrangeBasis.C
-   NodeMapMaker.C
-   PromoteElement.C
-   PromotedElementIO.C
-   PromotedPartHelper.C
-   QuadNElementDescription.C
-   QuadratureRule.C
-   TensorProductQuadratureRule.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/ElementCondenser.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ElementDescription.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/HexNElementDescription.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/LagrangeBasis.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/NodeMapMaker.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PromoteElement.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PromotedElementIO.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PromotedPartHelper.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/QuadNElementDescription.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/QuadratureRule.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TensorProductQuadratureRule.C
 )
