--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -1,17 +1,17 @@
-add_sources(GlobalSourceList
-   AssembleMeshDisplacementElemSolverAlgorithm.C
-   AssemblePressureForceBCSolverAlgorithm.C
-   MeshDisplacementEquationSystem.C
-   MeshDisplacementMassBackwardEulerNodeSuppAlg.C
-   FrameBase.C
-   FrameInertial.C
-   FrameNonInertial.C
-   MeshDisplacementEquationSystem.C
-   MeshDisplacementMassBackwardEulerNodeSuppAlg.C
-   MeshMotionAlg.C
-   MotionBase.C
-   MotionPulsatingSphere.C
-   MotionRotation.C
-   MotionScaling.C
-   MotionTranslation.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleMeshDisplacementElemSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssemblePressureForceBCSolverAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementMassBackwardEulerNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FrameBase.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FrameInertial.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/FrameNonInertial.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshDisplacementMassBackwardEulerNodeSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MeshMotionAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionBase.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionPulsatingSphere.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionRotation.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionScaling.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MotionTranslation.C
 )
