--- a/src/nso/CMakeLists.txt
+++ b/src/nso/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_sources(GlobalSourceList
-   MomentumNSOElemKernel.C
-   MomentumNSOElemSuppAlgDep.C
-   MomentumNSOGradElemSuppAlg.C
-   MomentumNSOKeElemKernel.C
-   MomentumNSOKeElemSuppAlgDep.C
-   MomentumNSOSijElemKernel.C
-   ScalarNSOElemKernel.C
-   ScalarNSOElemSuppAlgDep.C
-   ScalarNSOKeElemKernel.C
-   ScalarNSOKeElemSuppAlg.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumNSOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumNSOElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumNSOGradElemSuppAlg.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumNSOKeElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumNSOKeElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumNSOSijElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarNSOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarNSOElemSuppAlgDep.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarNSOKeElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarNSOKeElemSuppAlg.C
 )
