--- a/unit_tests/mesh_motion/CMakeLists.txt
+++ b/unit_tests/mesh_motion/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_sources(GlobalUnitSourceList
-   UnitTestCompositeFrames.C
-   UnitTestCompositeMotions.C
-   UnitTestMotionTypes.C
+target_sources(${utest_ex_name} PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestCompositeFrames.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestCompositeMotions.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMotionTypes.C
 )
