--- a/unit_tests/ngp_kernels/CMakeLists.txt
+++ b/unit_tests/ngp_kernels/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(GlobalUnitSourceList
-  UnitTestNgpKernel.C
-  UnitTestNgpLoops.C
+target_sources(${utest_ex_name} PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestNgpKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestNgpLoops.C
   )
