--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -1,44 +1,44 @@
-add_sources(GlobalSourceList
-   ContinuityAdvElemKernel.C
-   ContinuityInflowElemKernel.C
-   ContinuityMassElemKernel.C
-   ContinuityMassHOElemKernel.C
-   ContinuityOpenElemKernel.C
-   EnthalpyTGradBCElemKernel.C
-   KernelBuilderLog.C
-   MomentumActuatorSrcElemKernel.C
-   MomentumAdvDiffElemKernel.C
-   MomentumAdvDiffHOElemKernel.C
-   MomentumBuoyancyBoussinesqSrcElemKernel.C
-   MomentumBuoyancySrcElemKernel.C
-   MomentumBuoyancySrcHOElemKernel.C
-   MomentumCoriolisSrcElemKernel.C
-   MomentumHybridTurbElemKernel.C
-   MomentumMassElemKernel.C
-   MomentumMassHOElemKernel.C
-   MomentumOpenAdvDiffElemKernel.C
-   MomentumSymmetryElemKernel.C
-   MomentumUpwAdvDiffElemKernel.C
-   MomentumWallFunctionElemKernel.C
-   PressurePoissonHOElemKernel.C
-   ProjectedNodalGradientHOElemKernel.C
-   ScalarAdvDiffElemKernel.C
-   ScalarAdvDiffHOElemKernel.C
-   ScalarDiffElemKernel.C
-   ScalarDiffHOElemKernel.C
-   ScalarDiffFemKernel.C
-   ScalarFluxBCElemKernel.C
-   ScalarFluxPenaltyElemKernel.C
-   ScalarMassElemKernel.C
-   ScalarMassHOElemKernel.C
-   ScalarOpenAdvElemKernel.C
-   ScalarUpwAdvDiffElemKernel.C
-   SpecificDissipationRateSSTSrcElemKernel.C
-   SpecificDissipationRateSSTDESSrcElemKernel.C
-   TurbKineticEnergyKsgsDesignOrderSrcElemKernel.C
-   TurbKineticEnergyKsgsSrcElemKernel.C
-   TurbKineticEnergySSTDESSrcElemKernel.C
-   TurbKineticEnergySSTSrcElemKernel.C
-   WallDistElemKernel.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityAdvElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityInflowElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityMassElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityMassHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityOpenElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyTGradBCElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/KernelBuilderLog.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumActuatorSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumAdvDiffElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumAdvDiffHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancyBoussinesqSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancySrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumBuoyancySrcHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumCoriolisSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumHybridTurbElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumMassElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumMassHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumOpenAdvDiffElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSymmetryElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumUpwAdvDiffElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumWallFunctionElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/PressurePoissonHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ProjectedNodalGradientHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarAdvDiffElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarAdvDiffHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarDiffElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarDiffHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarDiffFemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarFluxBCElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarFluxPenaltyElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarMassElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarMassHOElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarOpenAdvElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarUpwAdvDiffElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SpecificDissipationRateSSTSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/SpecificDissipationRateSSTDESSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyKsgsDesignOrderSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyKsgsSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergySSTDESSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergySSTSrcElemKernel.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistElemKernel.C
 )
 
