--- a/src/master_element/CMakeLists.txt
+++ b/src/master_element/CMakeLists.txt
@@ -1,28 +1,28 @@
-add_sources(GlobalSourceList
-   CalculateBentHexVolume.F
-   CalculateHexVolume.F
-   CalculateOctohedronVolume.F
-   CalculatePolyhedralArea.F
-   CalculatePolyhedralVolume.F
-   CalculateQuadArea.F
-   HexPCVFEM.C
-   Hex27CVFEM.C
-   Hex8CVFEM.C
-   Hex8FEM.C
-   MasterElement.C
-   MasterElementFactory.C
-   MasterElementHO.C
-   MasterElementUtils.C
-   MasterElementWork.F
-   Pyr5CVFEM.C
-   Quad42DCVFEM.C
-   Quad43DCVFEM.C
-   Quad92DCVFEM.C
-   Quad93DCVFEM.C
-   Tet4CVFEM.C
-   Tri32DCVFEM.C
-   Tri33DCVFEM.C
-   Wed6CVFEM.C
-   Edge32DCVFEM.C
-   Edge22DCVFEM.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/CalculateBentHexVolume.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/CalculateHexVolume.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/CalculateOctohedronVolume.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/CalculatePolyhedralArea.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/CalculatePolyhedralVolume.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/CalculateQuadArea.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/HexPCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Hex27CVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Hex8CVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Hex8FEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MasterElement.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MasterElementFactory.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MasterElementHO.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MasterElementUtils.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/MasterElementWork.F
+   ${CMAKE_CURRENT_SOURCE_DIR}/Pyr5CVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Quad42DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Quad43DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Quad92DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Quad93DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Tet4CVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Tri32DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Tri33DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Wed6CVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Edge32DCVFEM.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Edge22DCVFEM.C
 )
