--- a/src/overset/CMakeLists.txt
+++ b/src/overset/CMakeLists.txt
@@ -1,19 +1,19 @@
-add_sources(GlobalSourceList
-   AssembleOversetPressureAlgorithm.C
-   AssembleOversetSolverConstraintAlgorithm.C
-   AssembleOversetWallDistAlgorithm.C
-   OversetConstraintBase.C
-   OversetInfo.C
-   OversetManager.C
-   OversetManagerSTK.C
-   UpdateOversetFringeAlgorithmDriver.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleOversetPressureAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleOversetSolverConstraintAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/AssembleOversetWallDistAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/OversetConstraintBase.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/OversetInfo.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/OversetManager.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/OversetManagerSTK.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UpdateOversetFringeAlgorithmDriver.C
 )
 
 if(ENABLE_TIOGA)
-   add_sources(GlobalSourceList
-      OversetManagerTIOGA.C
-      TiogaOptions.C
-      TiogaBlock.C
-      TiogaSTKIface.C
+   target_sources(nalu PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}/OversetManagerTIOGA.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/TiogaOptions.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/TiogaBlock.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/TiogaSTKIface.C
    )
 endif()
