--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(GlobalSourceList
-  ComputeVectorDivergence.C
-  StkHelpers.C
+target_sources(nalu PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/ComputeVectorDivergence.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/StkHelpers.C
   )
