--- a/src/wind_energy/CMakeLists.txt
+++ b/src/wind_energy/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_sources(GlobalSourceList
-  ABLForcingAlgorithm.C
-  BdyHeightAlgorithm.C
-  BdyLayerStatistics.C
-  SyntheticLidar.C
+target_sources(nalu PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/ABLForcingAlgorithm.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/BdyHeightAlgorithm.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/BdyLayerStatistics.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SyntheticLidar.C
   )
