--- a/src/xfer/CMakeLists.txt
+++ b/src/xfer/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(GlobalSourceList
-   Transfer.C
-   Transfers.C
+target_sources(nalu PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/Transfer.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/Transfers.C
 )
