--- a/unit_tests/algorithms/CMakeLists.txt
+++ b/unit_tests/algorithms/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_sources(GlobalUnitSourceList
-   UnitTestAlgorithm.C
-   UnitTestLESAlgorithms.C
-   UnitTestSSTAlgorithms.C
+target_sources(${utest_ex_name} PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestAlgorithm.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestLESAlgorithms.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestSSTAlgorithms.C
 )
