--- a/unit_tests/utils/CMakeLists.txt
+++ b/unit_tests/utils/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_sources(GlobalUnitSourceList
-   UnitTestComputeVectorDivergence.C
+target_sources(${utest_ex_name} PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestComputeVectorDivergence.C
 )
