Add new CrsGraph class
This is a step towards removing the matrix graph creation/initialization
that is currently in TpetraLinearSystem.  Currently, CrsGraph duplicates
functionality TpetraLinearSystem.  Everything compiles.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,8 @@ add_sources(GlobalSourceList
    ContinuityMassElemSuppAlgDep.C
    CopyFieldAlgorithm.C
    CoriolisSrc.C
+   CrsGraph.C
+   CrsGraphHelpers.C
    DataProbePostProcessing.C
    DgInfo.C
    DirichletBC.C
@@ -136,7 +138,6 @@ add_sources(GlobalSourceList
    SurfaceForceAndMomentWallFunctionAlgorithm.C
    TimeIntegrator.C
    TpetraLinearSystem.C
-   CrsGraphHelpers.C
    TpetraSegregatedLinearSystem.C
    TurbKineticEnergyEquationSystem.C
    TurbKineticEnergyKsgsBuoyantElemSuppAlg.C
