--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,11 +63,24 @@ endif(Trilinos_BUILD_SHARED_LIBS)
 
 ############################ YAML ######################################
 set(CMAKE_PREFIX_PATH ${YAML_DIR} ${CMAKE_PREFIX_PATH})
-find_package(YAML-CPP 0.6.2 QUIET REQUIRED)
+find_package(YAML-CPP QUIET)
+if(YAML-CPP_FOUND)
+  # YAML 0.6.2 or master branch is used
+  target_include_directories(nalu SYSTEM PUBLIC ${YAML_CPP_INCLUDE_DIR})
+else()
+  # YAML 0.5.3 is used
+  find_library(YAML_CPP_LIBRARIES NAMES yaml-cpp PATHS ${YAML_DIR}/lib)
+  find_path(YAML_CPP_INCLUDE_DIR yaml.h PATHS ${YAML_DIR}/include/yaml-cpp)
+  if((DEFINED YAML_CPP_LIBRARIES) AND (DEFINED YAML_CPP_INCLUDE_DIR))
+    target_include_directories(nalu SYSTEM PUBLIC ${YAML_CPP_INCLUDE_DIR}/..)
+    set(YAML-CPP_FOUND TRUE)
+  endif()
+endif()
 if(YAML-CPP_FOUND)
   message(STATUS "Found YAML-CPP = ${YAML_DIR}")
+else()
+  message(FATAL_ERROR "YAML-CPP NOT FOUND")
 endif()
-target_include_directories(nalu SYSTEM PUBLIC ${YAML_CPP_INCLUDE_DIR})
 
 ############################ CUDA ######################################
 if(ENABLE_CUDA)
