--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,8 +84,7 @@ if(ENABLE_FFTW)
   find_package(FFTW QUIET REQUIRED)
   if(FFTW_FOUND)
     message(STATUS "Found FFTW = ${USER_FFTW_DIR}")
-    target_include_directories(nalu SYSTEM PUBLIC ${FFTW_INCLUDE_DIRS})
-    target_link_libraries(nalu PUBLIC ${FFTW_LIBRARIES})
+    target_link_libraries(nalu PUBLIC fftw3)
     target_compile_definitions(nalu PUBLIC NALU_USES_FFTW)
   endif()
 endif()
@@ -126,8 +125,7 @@ if(ENABLE_OPENFAST)
   find_package(OpenFAST QUIET REQUIRED)
   if(OpenFAST_FOUND)
     message(STATUS "Found OpenFAST = ${USER_OpenFAST_DIR}")
-    target_include_directories(nalu SYSTEM PUBLIC ${OpenFAST_INCLUDE_DIRS})
-    target_link_libraries(nalu PUBLIC ${OpenFAST_LIBRARIES} ${OpenFAST_CPP_LIBRARIES})
+    target_link_libraries(nalu PUBLIC openfastlib openfastcpplib)
     target_compile_definitions(nalu PUBLIC NALU_USES_OPENFAST)
   endif()
 endif()
@@ -139,8 +137,7 @@ if(ENABLE_TIOGA)
   find_package(TIOGA QUIET REQUIRED)
   if(TIOGA_FOUND)
     message(STATUS "Found TIOGA = ${USER_TIOGA_DIR}")
-    target_include_directories(nalu SYSTEM PUBLIC ${TIOGA_INCLUDE_DIRS})
-    target_link_libraries(nalu PUBLIC ${TIOGA_LIBRARIES})
+    target_link_libraries(nalu PUBLIC tioga)
     target_compile_definitions(nalu PUBLIC NALU_USES_TIOGA)
     if(TIOGA_HAS_NODEGID)
       target_compile_definitions(nalu PUBLIC TIOGA_HAS_NODEGID)
