--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -7,6 +7,9 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/EffSSTDiffFluxCoeffAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyEffDiffFluxCoeffAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotEdgeAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MdotInflowAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MdotDensityAccumAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MdotOpenCorrectorAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotEdgeAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotElemAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SSTTAMSAveragesAlg.C
@@ -24,6 +27,7 @@ target_sources(nalu PRIVATE
   # Algorithm Drivers
   ${CMAKE_CURRENT_SOURCE_DIR}/FieldUpdateAlgDriver.C
   ${CMAKE_CURRENT_SOURCE_DIR}/NgpAlgDriver.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MdotAlgDriver.C
   ${CMAKE_CURRENT_SOURCE_DIR}/NodalGradAlgDriver.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEWallFuncAlgDriver.C
   ${CMAKE_CURRENT_SOURCE_DIR}/GeometryAlgDriver.C
