--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotInflowAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotDensityAccumAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotOpenCorrectorAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MdotOpenEdgeAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotEdgeAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotElemAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SSTTAMSAveragesAlg.C
