--- a/examples/filtered_lifting_line/without_correction/alm_simulation.yaml
+++ b/examples/filtered_lifting_line/without_correction/alm_simulation.yaml
@@ -131,7 +131,7 @@ realms:
       n_every_checkpoint: 100
 
       Turbine0:
-        martinez_correction: false
+        fllt_correction: false
         num_force_pts_blade: 300
         num_force_pts_tower: 20
         nacelle_cd: 0.0
