--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,11 +62,11 @@ else(Trilinos_BUILD_SHARED_LIBS)
 endif(Trilinos_BUILD_SHARED_LIBS)
 
 ############################ BOOST #####################################
-find_library(BOOST_LIBRARIES NAMES boost_filesystem PATHS ${BOOST_DIR}/lib)
-if (${BOOST_LIBRARIES} MATCHES ".*-NOTFOUND")
-  message(FATAL_ERROR "BOOST LIBRARY libboost_filesystem NOT FOUND")
+find_package(Boost REQUIRED COMPONENTS filesystem)
+if (DEFINED Boost_LIBRARIES)
+  message(STATUS "Found boost library = ${Boost_LIBRARIES}")
 else()
-  message(STATUS "Found boost library = ${BOOST_LIBRARIES}")
+  message(FATAL_ERROR "BOOST LIBRARY NOT FOUND")
 endif()
 
 ############################ YAML ######################################
@@ -237,7 +237,7 @@ target_include_directories(nalu PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(nalu PUBLIC ${CMAKE_BINARY_DIR}/include)
 target_include_directories(nalu SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
 target_link_libraries(nalu PUBLIC ${Trilinos_LIBRARIES})
-target_link_libraries(nalu PUBLIC ${BOOST_LIBRARIES})
+target_link_libraries(nalu PUBLIC ${Boost_LIBRARIES})
 target_link_libraries(nalu PUBLIC ${YAML_CPP_LIBRARIES})
 target_link_libraries(nalu PUBLIC MPI::MPI_CXX MPI::MPI_Fortran)
 if(MPI_COMPILE_FLAGS)
