--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,8 @@ if(ENABLE_FFTW)
   find_package(FFTW QUIET REQUIRED)
   if(FFTW_FOUND)
     message(STATUS "Found FFTW = ${USER_FFTW_DIR}")
-    target_link_libraries(nalu PUBLIC fftw3)
+    target_link_libraries(nalu PUBLIC ${FFTW_LIBRARIES})
+    target_include_directories(nalu SYSTEM PUBLIC ${FFTW_INCLUDE_DIRS})
     target_compile_definitions(nalu PUBLIC NALU_USES_FFTW)
   endif()
 endif()
@@ -118,8 +119,8 @@ if(ENABLE_HYPRE)
   find_package(HYPRE QUIET REQUIRED)
   if(HYPRE_FOUND)
     message(STATUS "Found HYPRE = ${USER_HYPRE_DIR}")
-    target_include_directories(nalu SYSTEM PUBLIC ${HYPRE_INCLUDE_DIRS})
     target_link_libraries(nalu PUBLIC ${HYPRE_LIBRARIES})
+    target_include_directories(nalu SYSTEM PUBLIC ${HYPRE_INCLUDE_DIRS})
     target_compile_definitions(nalu PUBLIC NALU_USES_HYPRE)
     include(CheckCXXSymbolExists)
     set(CMAKE_REQUIRED_INCLUDES "${HYPRE_INCLUDE_DIRS}")
@@ -147,7 +148,8 @@ if(ENABLE_OPENFAST)
   find_package(OpenFAST QUIET REQUIRED)
   if(OpenFAST_FOUND)
     message(STATUS "Found OpenFAST = ${USER_OpenFAST_DIR}")
-    target_link_libraries(nalu PUBLIC openfastlib openfastcpplib)
+    target_link_libraries(nalu PUBLIC ${OpenFAST_LIBRARIES} ${OpenFAST_CPP_LIBRARIES})
+    target_include_directories(nalu SYSTEM PUBLIC ${OpenFAST_INCLUDE_DIRS})
     target_compile_definitions(nalu PUBLIC NALU_USES_OPENFAST)
   endif()
 endif()
@@ -159,7 +161,8 @@ if(ENABLE_TIOGA)
   find_package(TIOGA QUIET REQUIRED)
   if(TIOGA_FOUND)
     message(STATUS "Found TIOGA = ${USER_TIOGA_DIR}")
-    target_link_libraries(nalu PUBLIC tioga)
+    target_link_libraries(nalu PUBLIC ${TIOGA_LIBRARIES})
+    target_include_directories(nalu SYSTEM PUBLIC ${TIOGA_INCLUDE_DIRS})
     target_compile_definitions(nalu PUBLIC NALU_USES_TIOGA)
     if(TIOGA_HAS_NODEGID)
       target_compile_definitions(nalu PUBLIC TIOGA_HAS_NODEGID)
