--- a/examples/filtered_lifting_line/with_correction/alm_simulation.yaml
+++ b/examples/filtered_lifting_line/with_correction/alm_simulation.yaml
@@ -142,7 +142,7 @@ realms:
         turbine_base_pos: [ 0.0, 0.0, -90.0 ]
         turbine_hub_pos: [ 0.0, 0.0, 90.0 ]
         restart_filename: "blah"
-        fast_input_filename: "nrel5mw.fst"
+        fast_input_filename: "../common_files/nrel5mw.fst"
         turb_id:  1
         turbine_name: machine_one
 
