--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/ABLProfileFunction.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/Actuator.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/actuator/Actuator.C
    ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm.C
    ${CMAKE_CURRENT_SOURCE_DIR}/AlgorithmDriver.C
    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityElemOpenSolverAlgorithm.C
@@ -147,9 +147,10 @@ endif()
 
 if(ENABLE_OPENFAST)
    target_sources(nalu PRIVATE
-      ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorFAST.C
-      ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorLineFAST.C
-      ${CMAKE_CURRENT_SOURCE_DIR}/ActuatorDiskFAST.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/UtilitiesActuator.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorFAST.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorLineFAST.C
+      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorDiskFAST.C
    )
 endif()
 
