Actuator: Break out coarse search for actuator
Create callable functions for searching with actuators

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,5 @@
 target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/ABLProfileFunction.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/actuator/Actuator.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorBulk.C
-   ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorParsing.C
    ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm.C
    ${CMAKE_CURRENT_SOURCE_DIR}/AlgorithmDriver.C
    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleContinuityElemOpenSolverAlgorithm.C
@@ -139,15 +136,6 @@ if(ENABLE_FFTW)
    )
 endif()
 
-if(ENABLE_OPENFAST)
-   target_sources(nalu PRIVATE
-      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/UtilitiesActuator.C
-      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorFAST.C
-      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorLineFAST.C
-      ${CMAKE_CURRENT_SOURCE_DIR}/actuator/ActuatorDiskFAST.C
-   )
-endif()
-
 if(ENABLE_HYPRE)
    target_sources(nalu PRIVATE
       ${CMAKE_CURRENT_SOURCE_DIR}/HypreDirectSolver.C
@@ -158,6 +146,7 @@ if(ENABLE_HYPRE)
    )
 endif()
 
+add_subdirectory(actuator)
 add_subdirectory(element_promotion)
 add_subdirectory(kernel)
 add_subdirectory(edge_kernels)
