Convert CFL/Re computation to NGP

--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(${utest_ex_name} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestNgpAlgUtils.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestCFLReAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestNodalGradAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestDiffFluxCoeffAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestEffSSTDiffFluxCoeffAlg.C
