--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -21,4 +21,5 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTBLTNodeKernel.C
   )
