--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -26,6 +26,7 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRLowReWallAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRWallFuncAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/NodalGradPOpenBoundaryAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SSTMaxLengthScaleAlg.C
 
   # Algorithm Drivers
   ${CMAKE_CURRENT_SOURCE_DIR}/CourantReAlgDriver.C
@@ -37,4 +38,5 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/GeometryAlgDriver.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallFricVelAlgDriver.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRWallFuncAlgDriver.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SSTMaxLengthScaleDriver.C
   )
