--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -1,4 +1,7 @@
 target_sources(nalu PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTBLTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/BLTGammaNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/BLTReThetaNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityGclNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityMassBDFNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyABLForceNodeKernel.C
@@ -21,6 +24,4 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTDESNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistNodeKernel.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTBLTNodeKernel.C
-  ${CMAKE_CURRENT_SOURCE_DIR}/BLTGammaNodeKernel.C
   )
