--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,6 +138,7 @@ target_sources(nalu PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/AssembleWallDistNonConformalAlgorithm.C
    ${CMAKE_CURRENT_SOURCE_DIR}/WallDistEquationSystem.C
    ${CMAKE_CURRENT_SOURCE_DIR}/GammaEquationSystem.C
+   ${CMAKE_CURRENT_SOURCE_DIR}/RethetaEquationSystem.C
 )
 
 if(ENABLE_FFTW)
