--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -1,5 +1,8 @@
 target_sources(nalu PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTBLTM2015NodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTBLTNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTBLTM2015NodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/BLTGammaM2015NodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/BLTGammaNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/BLTReThetaNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityGclNodeKernel.C
