--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -44,13 +44,8 @@ target_sources(${utest_ex_name} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestUtils.C
 )
 
-if(ENABLE_OPENFAST)
-   target_sources(${utest_ex_name} PRIVATE
-      ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorDiskFAST.C
-      ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestActuatorFASTGaussian.C
-   )
-endif()
 
+add_subdirectory(actuator)
 add_subdirectory(algorithms)
 add_subdirectory(kernels)
 add_subdirectory(edge_kernels)
